--- a/WPF_currency/WPF_currency/MainWindow.xaml
+++ b/WPF_currency/WPF_currency/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_currency"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"
         mc:Ignorable="d"
         Title="uwu" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
     <Grid>
@@ -53,6 +54,126 @@
                    VerticalContentAlignment="Center"
                    Content="Converted Currency"
                    FontSize="20"></Label>
+            <Label Name="lblCurrency"
+                   Height="40"
+                   Width="1000"
+                   HorizontalContentAlignment="Center"
+                   VerticalContentAlignment="Center"
+                   FontSize="20"></Label>
+        </StackPanel>
+        <StackPanel Grid.Row="2"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
+                    Height="60"
+                    Width="800">
+            <Label Height="40"
+                   Width="150"
+                   Content="Enter Amount : "
+                   Margin="35,0,0,0"
+                   VerticalAlignment="Bottom"
+                   Foreground="White"
+                   FontSize="20"></Label>
+            <Label Height="40"
+                   Width="150"
+                   Content="From : "
+                   Margin="110,0,0,0"
+                   VerticalAlignment="Bottom"
+                   Foreground="White"
+                   FontSize="20"></Label>
+            <Label Height="40"
+                   Width="150"
+                   Content="To : "
+                   Margin="130,0,0,0"
+                   VerticalAlignment="Bottom"
+                   Foreground="White"
+                   FontSize="20"></Label> 
+        </StackPanel>
+        <StackPanel Grid.Row="2"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Center"
+                    Height="90"
+                    Width="800"
+                    VerticalAlignment="Bottom">
+            <TextBox Name="txtCurrency"
+                     Width="200"
+                     Height="30"
+                     Margin="40,0,0,0"
+                     FontSize="18"
+                     VerticalContentAlignment="Center"
+                     VerticalAlignment="Top"
+                     PreviewTextInput="txtCurrency_PreviewTextInput"></TextBox>
+            <ComboBox Name="cmbFromCurrency"
+                      Width="170"
+                      Height="30"
+                      Margin="60,0,40,0"
+                      FontSize="18"
+                      VerticalContentAlignment="Center"
+                      VerticalAlignment="Top"
+                      MaxDropDownHeight="150"></ComboBox>
+            <fa:ImageAwesome Icon="Exchange"
+                             Height="30"
+                             Width="30"
+                             Foreground="White"
+                             VerticalAlignment="Top"></fa:ImageAwesome>
+            <ComboBox Name="cmbToCurrency"
+                      Width="170"
+                      Height="30"
+                      Margin="40,0,0,0"
+                      FontSize="18"
+                      VerticalContentAlignment="Center"
+                      VerticalAlignment="Top"
+                      MaxDropDownHeight="150"></ComboBox>
+        </StackPanel>
+        <StackPanel Grid.Row="3"
+                    Height="100"
+                    Width="1000"
+                    Orientation="Horizontal">
+            <Button Name="Convert"
+                    Height="40"
+                    Width="150"
+                    Content="Convert"
+                    Click="Convert_Click"
+                    Margin="350,0,20,0"
+                    Foreground="White"
+                    FontSize="2O"
+                    Style="{StaticResource ButtonRound}">
+                <Button.Background>
+                    <LinearGradientBrush StartPoint="0.0"
+                                         EndPoint="1.0">
+                        <GradientStop Color="#ec2075"
+                                      Offset="0.0" />
+                        <GradientStop Color="#f33944"
+                                      Offset="0.5" />
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
+            <Button Name="Clear"
+                    Height="40"
+                    Width="150"
+                    Content="Clear"
+                    Click="Clear_Click"
+                    Foreground="White"
+                    FontSize="20"
+                    Style="{StaticResource ButtonRound}">
+                <Button.Background>
+                    <LinearGradientBrush StartPoint="0.0"
+                                         EndPoint="1.0">
+                        <GradientStop Color="#ec2075"
+                                      Offset="0.0" />
+                        <GradientStop Color="#f33944"
+                                      Offset="0.5" />
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
+        </StackPanel>
+        <StackPanel Grid.Row="4"
+                    Height="150"
+                    Width="800"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Orientation="Horizontal">
+            
         </StackPanel>
     </Grid>
 </Window>
