updates to readme and WOF_Currency

--- a/WPF_currency/WPF_currency/App.xaml
+++ b/WPF_currency/WPF_currency/App.xaml
@@ -4,6 +4,20 @@
              xmlns:local="clr-namespace:WPF_currency"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="ButtonRound"
+               TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border CornerRadius="5"
+                                Background="{TemplateBinding Background}"
+                                BorderThickness="0.5">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                              VerticalAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 </Application>
