--- a/TBD/TBD/MainWindow.xaml
+++ b/TBD/TBD/MainWindow.xaml
@@ -27,6 +27,7 @@
                  Grid.Row="1"
                  Grid.Column="0"
                  Grid.RowSpan="3"
+                 Margin="4"
                  ItemsSource="{Binding allTasks}">
            
         </ListBox>
@@ -52,5 +53,9 @@
                 Width="105"
                 Grid.Row="3"
                 Grid.Column="1">Add new task</Button>
+        <TextBox x:Name="textBox"
+                 Grid.Row="0"
+                 Grid.Column="1"
+                 Margin="4"/>
     </Grid>
 </Window>
