--- a/Xamarin101JM/Xamarin101JM/Xamarin101JM/Views/CoffeeEquipmentPage.xaml
+++ b/Xamarin101JM/Xamarin101JM/Xamarin101JM/Views/CoffeeEquipmentPage.xaml
@@ -3,14 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Xamarin101JM.Views.CoffeeEquipmentPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Push the button!"
+        <Grid RowDefinitions="*, Auto, Auto, *">
+            <Label Text="{Binding CountDisplay}"
                 x:Name="LabelCount"
                 FontSize="Large"
+                Grid.Row="1"
                 HorizontalOptions="CenterAndExpand" />
-            <Button x:Name="ButtonClick"
-                    Clicked="ButtonClick_Clicked"
+            <Button Command="{Binding IncreaseCount}"
+                    Grid.Row="2"
                 Text="Click me :)" />
-        </StackLayout>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
