--- a/Xamarin101JM/Xamarin101JM/Xamarin101JM/Views/CoffeeEquipmentPage.xaml
+++ b/Xamarin101JM/Xamarin101JM/Xamarin101JM/Views/CoffeeEquipmentPage.xaml
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodels="clr-namespace:Xamarin101JM.ViewModels"
              x:Class="Xamarin101JM.Views.CoffeeEquipmentPage">
-    <ContentPage.Content>
+    <ContentPage.BindingContext>
+        <viewmodels:CoffeeEquipmentViewModel />
+    </ContentPage.BindingContext>
+    
         <Grid RowDefinitions="*, Auto, Auto, *">
             <Label Text="{Binding CountDisplay}"
                 x:Name="LabelCount"
@@ -13,5 +17,5 @@
                     Grid.Row="2"
                 Text="Click me :)" />
         </Grid>
-    </ContentPage.Content>
+    
 </ContentPage>
