--- a/Xamarin101JM/Xamarin101JM/Xamarin101JM/Views/CoffeeEquipmentPage.xaml
+++ b/Xamarin101JM/Xamarin101JM/Xamarin101JM/Views/CoffeeEquipmentPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:Xamarin101JM.ViewModels"
-             x:Class="Xamarin101JM.Views.CoffeeEquipmentPage">
+             x:Class="Xamarin101JM.Views.CoffeeEquipmentPage"
+             x:DataType="viewmodels:CoffeeEquipmentViewModel">
     <ContentPage.BindingContext>
         <viewmodels:CoffeeEquipmentViewModel />
     </ContentPage.BindingContext>
